--- a/src/styles/sass/App.scss
+++ b/src/styles/sass/App.scss
@@ -1,38 +1,11 @@
-.App {
-  text-align: center;
-}
+@import 'utilities/variables';
+@import 'utilities/mixins';
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+@import 'base/setup';
+@import 'base/typography';
+@import 'base/baseStyles';
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+@import 'layout/footer';
+@import 'layout/header';
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+@import 'pages/main';
